Removed LinkedIn Badge

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
         <h1 class="w3-center">Hello</h1>
         <p>My name is Charles Hollingworth and i'm a Games Developer in Birstol/North Yorkshire and this is my portfolio, please browse through the games. If you have any questions please feel free to reach out to me on LinkedIn</p>
         <p>CV's are available upon request, please contact me on:</p>
-        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-        <div class="badge-base LI-profile-badge w3-center" data-locale="en_US" data-size="large" data-theme="light"
-            data-type="HORIZONTAL" data-vanity="charles-h-27663a258" data-version="v1"><a
-                class="badge-base__link LI-simple-link"
-                href="https://uk.linkedin.com/in/charles-h-27663a258?trk=profile-badge">Charles Hollingwoth</a></div>
+        <a href="https://uk.linkedin.com/in/charles-h-27663a258?trk=profile-badge">Charles Hollingwoth</a>
 
     </div>
 
