--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <h1 class="w3-center">Hello</h1>
         <p>My name is Charles Hollingworth and i'm a Games Developer in Birstol/North Yorkshire and this is my portfolio, please browse through the games. If you have any questions please feel free to reach out to me on LinkedIn</p>
         <p>CV and Code, for all but the current project, is available upon request, please contact me on:</p>
-        <a class = "w3-center" href="https://uk.linkedin.com/in/charles-h-27663a258?trk=profile-badge">Charles Hollingwoth</a>
-
+        <a style="text-align: center;" href="https://uk.linkedin.com/in/charles-h-27663a258?trk=profile-badge">Charles Hollingwoth</a>
     </div>
 
     <hr>
