--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <h1 class="w3-center">Current project</h1>
 
     <div class="w3-row-padding">
-        <div class="w3-quarter"><p></p></div>
         <div class="w3-half">
                 <img src="PS.png" style="width:100%">
             <div class="w3-container w3-center">
@@ -33,7 +32,16 @@
                 <p>My current project is a Multiplayer Online Tower Defense based upon a map that can shift to create new paths allowing the direct manipulation of the enemy's path through the map to inconvenience your enemy.</p>
             </div>
         </div>
-        <div class="w3-quarter"><p></p></div>
+        <div class="w3-half">
+            <a href="https://www.youtube.com/watch?v=cqx-RKrUICc">
+            <img src="bb.png" style="width:100%">
+            </a>
+        <div class="w3-container w3-center">
+            <p class="w3-xlarge">Burglar Battle</p>
+            <hr>
+            <p>This is my final university project where the entire year of around 40 student collaborated to make a single game, i specifically crated the patrol & management systems for the AI</p>
+        </div>
+    </div>
         </div> 
 
 
