--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <hr>
 
-    <h1 class="w3-center">Current project</h1>
+    <h1 class="w3-center">Current projects</h1>
 
     <div class="w3-row-padding">
         <div class="w3-half">
