--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="w3-container w3-center">
             <p class="w3-xlarge">Burglar Battle</p>
             <hr>
-            <p>This is my final university project where the entire year of around 40 student collaborated to make a single game, i specifically crated the patrol & management systems for the AI.</p>
+            <p>This is my final university project where the entire year of around 40 student collaborated to make a single game, i specifically crated the patrol & management systems for the AI and deployment to the Playstation platfrom.</p>
         </div>
     </div>
         </div> 
