--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="styles.css">
+    <!--
+     __                                        _                
+    /  |_  _  __ |  _  _    |_| _  |  |  o __ (_|    _  ___|_|_ 
+    \__| |(_| |  | (/__>    | |(_) |  |  | | |__|\^/(_) |  |_| |
 
+    Welcome to my sites markdown
+    -->
 </head>
 
 <body>
@@ -39,7 +45,7 @@
         <div class="w3-container w3-center">
             <p class="w3-xlarge">Burglar Battle</p>
             <hr>
-            <p>This is my final university project where the entire year of around 40 student collaborated to make a single game, i specifically crated the patrol & management systems for the AI and deployment to the Playstation platfrom.</p>
+            <p>This is my final university project where the entire year of around 40 student collaborated to make a single game. I specifically crated the patrol & management systems for the AI and deployment to the Playstation platfrom.</p>
         </div>
     </div>
         </div> 
@@ -161,7 +167,7 @@
                 <p>Control Scheme Manager</p>
                 <p>ECS and Backend Systems</p>
                 <hr>
-                <p>This was a group effort to recreate the game Populus in DirectX in a week, i was tasked with creating the backend to allow for control rebinding as our target platform was an arcade cabinet, although difficult to see in the demonstration video each pop, or human, will create housing on level ground and will create new pops.</p>
+                <p>This was a group effort to recreate the game Populus in DirectX in a week, I was tasked with creating the backend to allow for control rebinding as our target platform was an arcade cabinet, although difficult to see in the demonstration video each pop, or human, will create housing on level ground and will create new pops.</p>
             </div>
         </div>
 
