--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1 class="w3-center">Current projects</h1>
 
     <div class="w3-row-padding">
-        <div class="w3-half">
+        <div class="w3-third">
                 <img src="PS.png" style="width:100%">
             <div class="w3-container w3-center">
                 <p class="w3-xlarge">PullShot Tower Defense</p>
@@ -38,7 +38,17 @@
                 <p>My current project is a Multiplayer Online Tower Defense based upon a map that can shift to create new paths allowing the direct manipulation of the enemy's path through the map to inconvenience your enemy.</p>
             </div>
         </div>
-        <div class="w3-half">
+
+        <div class="w3-third">
+            <img src="dis.png" style="width:100%">
+        <div class="w3-container w3-center">
+            <p class="w3-xlarge">Dissertation: Network Communication Standards</p>
+            <hr>
+            <p>My Dissertation project has been to create a network protocol built on top of UDP, this however was simplified down to the creation of a standard for data transference built on top of TCP due to time constraints. The TCP server in the example project is wrapped into a Shared Library made for the standard.</p>
+        </div>
+    </div>
+
+        <div class="w3-third">
             <a href="https://www.youtube.com/watch?v=cqx-RKrUICc">
             <img src="bb.png" style="width:100%">
             </a>
