--- a/games/Pullshot/index.html
+++ b/games/Pullshot/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/web.loader.js";
+      var loaderUrl = buildUrl + "/Pullshot.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web.data.gz",
-        frameworkUrl: buildUrl + "/web.framework.js.gz",
-        codeUrl: buildUrl + "/web.wasm.gz",
+        dataUrl: buildUrl + "/Pullshot.data",
+        frameworkUrl: buildUrl + "/Pullshot.framework.js",
+        codeUrl: buildUrl + "/Pullshot.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "CJH",
         productName: "PullShot",
