--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>About Me</a> 
     </div>
   <div class="w3-panel w3-large">
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <a href="https://www.linkedin.com/in/charles-hollingworth-27663a258/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   </div>
 </nav>
 
@@ -167,9 +167,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <p>I have recently finished my final year in a Games Technology course and I am looking to start my career in games. Training in Performing Arts, Kitchens, Wearhouses, and Casinos has given me a wide range of skills, hobbies, and experience that i'd like to bring to my work in games.</p>
     <hr>
     <p>
-      <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
+      <a href="https://www.linkedin.com/in/charles-hollingworth-27663a258/"><button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
         <i class="fa fa-linkedin w3-margin-right"></i>Request CV
       </button>
+      </a>
     </p>
   </div>
     <div class="w3-half">
