Added Lampray to projects.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ code {
   <div class="w3-container" style="margin-bottom:32px" id="about">
     <div class="w3-half">
     <h4><b>About Me</b></h4>
-    <p>Hello, I'm Charles Hollingworth and i'm a Games Developer in Birstol/North Yorkshire and this is my portfolio, please browse through my Games and Technical Explorations. If you have any questions please feel free to reach out to me on LinkedIn</p>
+    <p>Hello, I'm Charles Hollingworth and i'm a Games Developer in North Yorkshire and this is my portfolio, please browse through my Games and Technical Explorations. If you have any questions please feel free to reach out to me on LinkedIn</p>
     <p>I have recently finished my final year in a Games Technology course and I am looking to start my career in games. Training in Performing Arts, Kitchens, Wearhouses, and Casinos has given me a wide range of skills, hobbies, and experience that i'd like to bring to my work in games.</p>
     <hr>
     <p>
@@ -103,17 +103,27 @@ code {
   </header>
 
   
-  <div class="w3-container">
-    <img onclick="document.getElementById('bbModal').style.display='block'" src="bb.png" alt="Burglar Battle" style="width:100%" class="w3-hover-opacity">
+  <div class="w3-container  w3-margin-bottom">
+    <a href="https://github.com/CHollingworth/Lampray">
+    <img src="LMP-64.png" alt="Lampray" style="width:100%" class="w3-hover-opacity">
+  </a>
     <div class="w3-container w3-white">
-      <p><b>Burglar Battle</b></p>
-      <p>This is my final university project where the entire year of around 40 student collaborated to make a single game. I specifically crated the patrol & management systems for the AI and deployment to the Playstation platfrom.</p>
+      <p><b>Lampray</b></p>
+      <p>Lampray is an open-source C++ Mod Manager for Baldur's gate 3 & Cyberpunk 2077 for the Linux Platform.</p>
       </div>
   </div>
   <br>
   
   <div class="w3-row-padding">
-    <div class="w3-half w3-container w3-margin-bottom">
+    <div class="w3-third w3-container  w3-margin-bottom">
+      <img onclick="document.getElementById('bbModal').style.display='block'" src="bb.png" alt="Burglar Battle" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Burglar Battle</b></p>
+        <p>This is my final university project where the entire year of around 40 student collaborated to make a single game. I specifically crated the patrol & management systems for the AI and deployment to the Playstation platfrom.</p>
+        </div>
+    </div>
+
+    <div class="w3-third w3-container w3-margin-bottom">
       <img onclick="document.getElementById('psModal').style.display='block'" src="PS.png" alt="Pullshot" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>PullShot Tower Defense</b></p>
@@ -123,7 +133,7 @@ code {
       </div>
         </div>
 
-    <div class="w3-half w3-container w3-margin-bottom">
+    <div class="w3-third w3-container w3-margin-bottom">
       <img onclick="document.getElementById('disModal').style.display='block'" src="dis.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Dissertation: Network Communication Standards</b></p>
